
New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.


2017-05-30 niel
	Mrg: PR 2445, from nightah - Reworked all Anime release naming regexes.
2017-05-28 niel
	Chg: Predb model: Change occurences of 'name' to 'title', even variable names as it is obviously
		confusing me!
2017-05-26 niel
	Add: Adding post-install-cmd to composer.json. It runs addHooks.sh script if installed in dev
		mode.
2017-05-25 b3rs3rk
	Fix: Two more predate instances that should be created
2017-05-24 b3rs3rk
	Fix: Tmux monitor query still looking for predate column
	Fix: Disable timezone checks if connection is to SphinxQL as it doesn't support any TZ variables
	Fix: Many predate string constants not changed to reflect new created column
	Fix: Change predb table DDL to reflect predate -> created name change in secondary key
2017-05-24 niel
	Mrg: dev-ircscraper branch. The IRCScraper code has been changed to make it properly timezone
		aware. As before, predates are received as UTC/GMT time. However they are not converted
		using a call to the Database server (whose timezone is essentially unknown). Instead, the
		timezone of the connection to the server is used, which we are able to set as part of the
		bootstrap process. By default, this timezone will be the same as the PHP code running the
		indexer, but it may be set to any valid zone by the user.
		 Database changes: The 'predate' datetime field is replaced by a 'created' timestamp field
		and a new 'updated' timestamp field is added. **NOTE** If you have not already done so, you
		MUST populate the database's timezone tables as described in their documentation. For
		Debian/Ubuntu users 'mysql_tzinfo_to_sql /usr/share/zoneinfo | mysql -u root mysql' should